syntax = "proto3";

// This section is specific for Java language
//option java_multiple_files = true;
//option objc_class_prefix = "SD";
option java_package = "com.strongsalt.strongdoc.sdk.proto";
option java_outer_classname = "Account";
option java_generic_services = true;

package proto;

import "protoc-gen-swagger/options/annotations.proto";
import "google/protobuf/timestamp.proto";
import "encryption.proto";

enum AuthType {
  AUTH_NONE = 0;
  AUTH_SRP = 1;
}

enum AuthPurpose {
  NO_PURPOSE = 0;
  AUTH_LOGIN = 1;
  AUTH_PERSISTENT = 2;
}

message RegisterAuthData {
  // The type of authentication the user will use
  AuthType authType = 1;
  // Which version of the specified authentication type the user will use
  int32 authVersion = 2;
  // If using the SRP authentication type: the user's srp verifier string
  string srpVerifier = 3;
}

message RegisterOrganizationReq {
  option (grpc.gateway.protoc_gen_swagger.options.openapiv2_schema) = {
    json_schema: {
      title: "RegisterOrganizationReq"
    }
    example: {
      value: '{"orgName": "WhiteHouse", "orgEmail": "email@company.com", "orgAddr": "1600 Pennsylvania Ave NW, Washington, DC 20500", "userName": "Donald Trump", "password": "ukrainismyfriend", "adminEmail": "donald.trump@whitehouse.gov", "sharableOrgs": ["cnn", "fbi", "democrats"], "multiLevelShare": true, "source": "", "sourceData": "{\\"registrationToken\\": \\"abcd1234\\"}", "kdfMetadata":"serialized kdf", "userPubKey": "userPubKey", "encUserPriKey": "encUserPriKey", "orgPubKey":"orgPubKey", "encOrgPriKey":"encOrgPriKey", "adminLoginData": {"loginType": "SRP", "loginVersion": 1, "srpVerifier": "neededIfTypeSRP"}}'
    }
  };

  // The name of the organization. This value has to be unique.
  string orgName = 1;
  // The email of the organization.
  string orgEmail = 2;
  // The address of the organization. This is optional.
  string orgAddr = 3;
  // The administrator username. If the administrator does not exist,
  // it will be created.
  string userName = 4;
  // The administrator password.
  string password = 5;
  // The administrator email. This serves as the unique ID of
  // the administrator user.
  string adminEmail = 6;
  // The list of sharable organization IDs. The users in this
  // organization can only share documents to other users in
  // the organizations in the sharableOrgs list.
  repeated string sharableOrgs = 7;
  // Enables the ability to "reshare" a document that was shared
  // to him/her to another user.
  bool multiLevelShare = 8;
  // How was the organization registered (e.g. from "AWS Marketplace")
  string source = 9;
  // Any data related to registration from the source (in JSON)
  string sourceData = 10;
  // Stripe paymentID for syncronous account setup
  string pmID = 11;
  // serialized kdf
  string kdfMetadata = 12;
  // user public key
  string userPubKey = 13;
  // encrypted user private key
  string encUserPriKey = 14;
  // organization public key
  string orgPubKey = 15;
  // encrypted organization private key
  string encOrgPriKey = 16;
  // Data needed to establish how the admin user will authenticate
  RegisterAuthData adminAuthData = 17;
}

message RegisterOrganizationResp {
  option (grpc.gateway.protoc_gen_swagger.options.openapiv2_schema) = {
    json_schema: {
      title: "RegisterOrganizationResp"
    }
    example: {
      value: '{"orgID": "WhiteHouse", "userID": "donald.trump@whitehouse.gov"}'
    }
  };

  // The ID of the created organization. This is the unique ID to
  // use on future operation with the organization.
  string orgID = 1;
  // The newly created unique administrator user ID.
  string userID = 2;
  // Token used for Stripe integration
  string clientSecret = 3;
}

message RegisterUserReq {
  option (grpc.gateway.protoc_gen_swagger.options.openapiv2_schema) = {
    json_schema: {
      title: "RegisterUserReq"
    }
    example: {
      value: '{"invitationCode": "abc123", "orgID": "orgid123", "email": "mike.pence@whitehouse.gov", "kdfMetadata": "kdfMetadata", "userPubKey": "dfdabddfaj", "encUserPriKey": "abdfjalsd", "userName": "Mike Pence", "userPassword": "password", "loginData": {"loginType": "SRP", "loginVersion": 1, "srpVerifier": "neededIfTypeSRP"}}'
    }
  };
  string invitationCode = 1;
  string orgID = 2;
  string email = 3;
  string kdfMetadata = 4;
  string userPubKey = 5;
  string encUserPriKey = 6;
  string userName = 7;
  string password = 8;
  // Data needed to establish how the user will authenticate
  RegisterAuthData authData = 9;
}

message RegisterUserResp {
  option (grpc.gateway.protoc_gen_swagger.options.openapiv2_schema) = {
    json_schema: {
      title: "RegisterUserResp"
    }
    example: {
      value: '{"success": true, "userID": "account@strongsalt.com"}'
    }
  };
  bool success = 1;
  string userID = 2;
  string orgID = 3;
}

message RemoveUserReq {
  option (grpc.gateway.protoc_gen_swagger.options.openapiv2_schema) = {
    json_schema: {
      title: "RemoveUserReq"
    }
    example: {
      value: '{"userID": "donal.trump@whitehouse.gov"}'
    }
  };

  // The ID of the user to remove.
  string userID = 1;
}

message RemoveUserResp {
  option (grpc.gateway.protoc_gen_swagger.options.openapiv2_schema) = {
    json_schema: {
      title: "RemoveUserResp"
    }
    example: {
      value: '{"count": 1}'
    }
  };

  // The count of the number of users removed
  int64 count = 1;
}

message PreparePromoteUserReq {
  option (grpc.gateway.protoc_gen_swagger.options.openapiv2_schema) = {
    json_schema: {
      title: "PreparePromoteUserReq"
    }
    example: {
      value: '{"userID": "donald.duck@whitehouse.gov"}'
    }
  };

  // The ID of the user to promote.
  string userID = 1;
}

message PreparePromoteUserResp {
  option (grpc.gateway.protoc_gen_swagger.options.openapiv2_schema) = {
    json_schema: {
      title: "PreparePromoteUserResp"
    }
    example: {
      value: '{"success": true, "encOrgPriKey": "encOrgPriKey", "encUserPriKey": "encUserPriKey", "newUserPubKey": "newUserPubKey"}'
    }
  };

  // Whether to continue with next step
  bool success = 1;
  // encrypted organization private key
  EncryptedKey encOrgKey = 2;
  // encrypted user private key
  EncryptedKey encUserPriKey = 3;
  // public key of new user
  Key newUserPubKey = 4;
}

message PromoteUserReq {
  option (grpc.gateway.protoc_gen_swagger.options.openapiv2_schema) = {
    json_schema: {
      title: "PromoteUserReq"
    }
    example: {
      value: '{"encryptedKey": {"encKey": "asdf", "encryptorID": "abc123", "ownerID": "person", "keyID": "asdf"}}'
    }
  };

  // re-encrypted key
  EncryptedKey encryptedKey = 1;
}

message PromoteUserResp {
  option (grpc.gateway.protoc_gen_swagger.options.openapiv2_schema) = {
    json_schema: {
      title: "PromoteUserResp"
    }
    example: {
      value: '{"success": true}'
    }
  };

  // Whether the promotion was successful.
  bool success = 1;
  // Whether need start over
  bool startOver = 2;
}

message DemoteUserReq {
  option (grpc.gateway.protoc_gen_swagger.options.openapiv2_schema) = {
    json_schema: {
      title: "DemoteUserReq"
    }
    example: {
      value: '{"userID": "donald.trump@whitehouse.gov"}'
    }
  };

  // The ID of the user to demote.
  string userID = 1;
}

message DemoteUserResp {
  option (grpc.gateway.protoc_gen_swagger.options.openapiv2_schema) = {
    json_schema: {
      title: "DemoteUserResp"
    }
    example: {
      value: '{"success": true}'
    }
  };

  // Whether the demotion was successful.
  bool success = 1;
}

message PrepareLoginReq {
  option (grpc.gateway.protoc_gen_swagger.options.openapiv2_schema) = {
    json_schema: {
      title: "PrepareLoginReq"
    }
    example: {
      value: '{"emailOrUserID": "user@website.com", "orgID": "OrgCorp"}'
    }
  };

  // Either the user's email address or the user's userID
  string emailOrUserID = 1;
  // The orgID of the organization the user would like to log in to
  string orgID = 2;
}

message PrepareLoginResp {
  option (grpc.gateway.protoc_gen_swagger.options.openapiv2_schema) = {
    json_schema: {
      title: "PrepareLoginResp"
    }
    example: {
      value: '{"userID": "user123", "prepareAuthResp": {"authType": "SRP", "authVersion": 1}}'
    }
  };

  // The user's userID, needed in case the user specified their email address in the request
  string userID = 1;
  // The user's authentication metadata
  PrepareAuthResp prepareAuthResp = 2;
}


message PrepareAuthReq {
  option (grpc.gateway.protoc_gen_swagger.options.openapiv2_schema) = {
    json_schema: {
      title: "PrepareAuthReq"
    }
    example: {
      value: '{}'
    }
  };
}

message PrepareAuthResp {
  option (grpc.gateway.protoc_gen_swagger.options.openapiv2_schema) = {
    json_schema: {
      title: "PrepareAuthResp"
    }
    example: {
      value: '{"authType": "SRP", "authVersion": 1}'
    }
  };

  // The type of authentication the user uses
  AuthType authType = 1;
  // Which version of the authentication type the user uses
  int32 authVersion = 2;
}

message LoginReq {
  option (grpc.gateway.protoc_gen_swagger.options.openapiv2_schema) = {
    json_schema: {
      title: "LoginReq"
    }
    example: {
      value: '{"userID": "donald.trump@whitehouse.gov", "password": "ukrainismyfriend", "orgID": "WhiteHouse"}'
    }
  };

  // The ID of the user to login as.
  string userID = 1;
  // The password of the user.
  string password = 2;
  // The ID of the organization.
  string orgID = 3;
}

message LoginResp {
  option (grpc.gateway.protoc_gen_swagger.options.openapiv2_schema) = {
    json_schema: {
      title: "LoginResp"
    }
    example: {
      value: '{"token": "blahblahblah", "kdfMeta": "serializedKdfMetaData"}'
    }
  };

  // The JWT token to be used for all APIs that require authentication.
  string token = 1;
  // The user's serialized KDF metadata
  string kdfMeta = 2;
  // The keyID of the user's current passwordKey
  string keyID = 3;
}

message SrpInitReq {
  option (grpc.gateway.protoc_gen_swagger.options.openapiv2_schema) = {
    json_schema: {
      title: "SrpInitReq"
    }
    example: {
      value: '{"userID": "user123", "orgID": "OrgCorp", "clientCreds": "srpGeneratedString123"}'
    }
  };

  // The userID of the user that will be logging in
  string userID = 1;
  // The orgID that the user will be logging in to
  string orgID = 2;
  // The client credentials string generated by the SRP package
  string clientCreds = 3;
  AuthPurpose authPurpose = 4;
}

message SrpInitResp {
  option (grpc.gateway.protoc_gen_swagger.options.openapiv2_schema) = {
    json_schema: {
      title: "SrpInitResp"
    }
    example: {
      value: '{"loginID": "abc123", "serverCreds": "srpGeneratedString123"}'
    }
  };

  // The authID of this attempted authentication, which needs to be given in the next step
  string authID = 1;
  // The server credentials string generated by the SRP package
  string serverCreds = 2;
}

message SrpProofReq {
  option (grpc.gateway.protoc_gen_swagger.options.openapiv2_schema) = {
    json_schema: {
      title: "SrpProofReq"
    }
    example: {
      value: '{"userID": "user123", "authID": "abc123", "clientProof": "srpGeneratedString"}'
    }
  };

  // The user's userID
  string userID = 1;
  // The authID received from the SrpInit step
  string authID = 2;
  // The client proof string generated by the SRP package
  string clientProof = 3;
}

message SrpProofResp {
  option (grpc.gateway.protoc_gen_swagger.options.openapiv2_schema) = {
    json_schema: {
      title: "SrpProofResp"
    }
    example: {
      value: '{"success": true, "serverProof": "srpGeneratedString123", "loginResponse": {"token": "abc123", "kdfMeta": "a1b2c3", "keyID": "12345"}}'
    }
  };

  // Whether or not the server accepted the client proof (i.e. the user's password was correct)
  bool success = 1;
  // The server proof generated by the SRP package
  string serverProof = 2;
  // The login metadata given in response to a successful login
  LoginResp loginResponse = 3;
}

message LogoutReq {
  option (grpc.gateway.protoc_gen_swagger.options.openapiv2_schema) = {
    json_schema: {
      title: "LogoutReq"
    }
  };
}

message LogoutResp {
  option (grpc.gateway.protoc_gen_swagger.options.openapiv2_schema) = {
    json_schema: {
      title: "LogoutResp"
    }
    example: {
      value: '{"status": "you OUT"}'
    }
  };

  // The logout status.
  string status = 1;
}

message ListUsersReq {
  option (grpc.gateway.protoc_gen_swagger.options.openapiv2_schema) = {
    json_schema: {
      title: "ListUsersReq"
    }
  };
}

message ListUsersResp {
  option (grpc.gateway.protoc_gen_swagger.options.openapiv2_schema) = {
    json_schema: {
      title: "ListUsersResp"
    }
    example: {
      value: '{"orgUsers":[{"userName": "Donald Trump", "userID": "donald.trump@whitehouse.gov", "isAdmin": true}]}'
    }
  };

  message OrgUser {
    // The name of the user.
    string userName = 1;
    // The ID of the user.
    string userID = 2;
    // Whether the user is an administrator.
    bool isAdmin = 3;
  }

  // The list of users in the organization.
  repeated OrgUser orgUsers = 1;
}

message RemoveOrganizationReq {
  option (grpc.gateway.protoc_gen_swagger.options.openapiv2_schema) = {
    json_schema: {
      title: "RemoveOrganizationReq"
    }
    example: {
      value: '{"force": true}'
    }
  };

  // Whether to force removal of organization or not.
  bool force = 1;
}

message RemoveOrganizationResp {
  option (grpc.gateway.protoc_gen_swagger.options.openapiv2_schema) = {
    json_schema: {
      title: "RemoveOrganizationResp"
    }
    example: {
      value: '{"success": true, "postponed": false}'
    }
  };

  // Whether the removal was successful
  bool success = 1;
  // True in case the removal will happen later after org has been charged one last time
  bool postponed = 2;
}

message AddSharableOrgReq {
  option (grpc.gateway.protoc_gen_swagger.options.openapiv2_schema) = {
    json_schema: {
      title: "AddSharableOrgReq"
    }
    example: {
      value: '{"newOrgID": "string"}'
    }
  };

  // The ID of the new sharable org.
  string newOrgID = 1;
}

message AddSharableOrgResp {
  option (grpc.gateway.protoc_gen_swagger.options.openapiv2_schema) = {
    json_schema: {
      title: "AddSharableOrgResp"
    }
    example: {
      value: '{"success": true}'
    }
  };

  // Whether the add was successful
  bool success = 1;
}

message RemoveSharableOrgReq {
  option (grpc.gateway.protoc_gen_swagger.options.openapiv2_schema) = {
    json_schema: {
      title: "RemoveSharableOrgReq"
    }
    example: {
      value: '{"removeOrgID": "string"}'
    }
  };

  // The ID of the sharable org to remove.
  string removeOrgID = 1;
}

message RemoveSharableOrgResp {
  option (grpc.gateway.protoc_gen_swagger.options.openapiv2_schema) = {
    json_schema: {
      title: "RemoveSharableOrgResp"
    }
    example: {
      value: '{"success": true}'
    }
  };

  // Whether the removal was successful
  bool success = 1;
}

message SetMultiLevelSharingReq {
  option (grpc.gateway.protoc_gen_swagger.options.openapiv2_schema) = {
    json_schema: {
      title: "SetMultiLevelSharingReq"
    }
    example: {
      value: '{"enable": true}'
    }
  };

  // Whether or not to enable multi-level sharing
  bool enable = 1;
}

message  SetMultiLevelSharingResp {
  option (grpc.gateway.protoc_gen_swagger.options.openapiv2_schema) = {
    json_schema: {
      title: "SetMultiLevelSharingResp"
    }
    example: {
      value: '{"success": true}'
    }
  };

  // Whether the update was successful
  bool success = 1;
}

message SetAccountInfoReq {
  option (grpc.gateway.protoc_gen_swagger.options.openapiv2_schema) = {
    json_schema: {
      title: "SetAccountInfoReq"
    }
    example: {
      value: '{"orgEmail": "newEmail@orgwebsite.com", "orgAddress": "1234 Org St."}'
    }
  };

  // The new organization email address
  string orgEmail = 1;
  // The new organization address
  string orgAddress = 2;
}
  
message  SetAccountInfoResp {
  option (grpc.gateway.protoc_gen_swagger.options.openapiv2_schema) = {
    json_schema: {
      title: "SetAccountInfoResp"
    }
    example: {
      value: '{"success": true}'
    }
  };

  // Whether the update was successful
  bool success = 1;
}

message SetUserInfoReq {
  option (grpc.gateway.protoc_gen_swagger.options.openapiv2_schema) = {
    json_schema: {
      title: "SetUserInfoReq"
    }
    example: {
      value: '{"name": "User Person", "email": "newEmail@website.com"}'
    }
  };

  // The new user name
  string name = 1;
  // The new user email
  string email = 2;
}

message  SetUserInfoResp {
  option (grpc.gateway.protoc_gen_swagger.options.openapiv2_schema) = {
    json_schema: {
      title: "SetUserInfoResp"
    }
    example: {
      value: '{"success": true}'
    }
  };

  // Whether the update was successful
  bool success = 1;
}

message ChangeUserPasswordReq {
  option (grpc.gateway.protoc_gen_swagger.options.openapiv2_schema) = {
    json_schema: {
      title: "ChangeUserPasswordReq"
    }
    example: {
      value: '{"oldPassword": "oldPassword123", "newPassword": "newPassword123"}'
    }
  };

  // The old user password
  string oldPassword = 1;
  // The new user password
  string newPassword = 2;
}

message  ChangeUserPasswordResp {
  option (grpc.gateway.protoc_gen_swagger.options.openapiv2_schema) = {
    json_schema: {
      title: "ChangeUserPasswordResp"
    }
    example: {
      value: '{"success": true}'
    }
  };

  // Whether the update was successful
  bool success = 1;
}

message Subscription {
  option (grpc.gateway.protoc_gen_swagger.options.openapiv2_schema) = {
    json_schema: {
      title: "Subscription"
    }
    example: {
      value: '{"type":"Credit Card","status":"Subscribed"}'
    }
  };

  // TODO: Either return integer codes instead (must be documented) or use enum

  // Subscription type (AWS Marketplace, Credit Card, etc.)
  string type = 1;
  // State of the subscription (Created, Subscribed, Unsubscribed, etc.)
  string status = 2;
}

message Payment {
  option (grpc.gateway.protoc_gen_swagger.options.openapiv2_schema) = {
    json_schema: {
      title: "Payment"
    }
    example: {
      value: '{"billedAt": "2020-02-01T12:30:15.123Z", "periodStart": "2020-01-01T00:00:00.000Z", "periodEnd": "2020-02-01T00:00:00.000Z", "amount": 52.16, "status": "No Payment" }'
    }
  };
 
  // Timestamp of the payment billing transaction
  google.protobuf.Timestamp billedAt = 1;
  // Start of the payment period
  google.protobuf.Timestamp periodStart = 2;
  // End of the payment period
  google.protobuf.Timestamp periodEnd = 3;
  // Amount of  payment 
  double amount = 4;
  // TODO document integer codes

  // Payment status ("No Payment","Zero Payment","Payment Pending","Payment Success","Payment Failed")
  string status = 5;
}

message GetAccountInfoReq {
}

message GetAccountInfoResp {
  option (grpc.gateway.protoc_gen_swagger.options.openapiv2_schema) = {
    json_schema: {
      title: "GetAccountInfoResp"
    }
    example: {
      value: '{"orgID": "thisOrganization", "orgEmail": "email@company.com", "subscription":{"type":"Credit Card","status":"Subscribed"}, "payments":[{"billedAt": "2020-02-01T12:30:15.123Z", "periodStart": "2020-01-01T00:00:00.000Z", "periodEnd": "2020-02-01T00:00:00.000Z", "amount": 52.16, "status": "Payment Success" }], "orgAddress": "1600 Pennsylvania Ave NW, Washington, DC 20500", "multiLevelShare": true, "sharableOrgs": ["cnn", "democrats"]}'
    }
  };

  // Account's orgID
  string orgID = 1;
  // Account's email
  string orgEmail = 2;
  // Account's subscription info
  Subscription subscription = 3;
  // List of all account's payments
  repeated Payment payments = 4;
  // The address of the organization
  string orgAddress = 5;  
  // The ability to "reshare" a document that was shared to him/her to another user
  bool multiLevelShare = 6;
  // The list of sharable organization IDs.
  repeated string sharableOrgs = 7;
}

message GetUserInfoReq {
}

message GetUserInfoResp {
  option (grpc.gateway.protoc_gen_swagger.options.openapiv2_schema) = {
    json_schema: {
      title: "GetUserInfoResp"
    }
    example: {
    value: '{"userID": "userID", "email": "email", "userName": "userName", "orgID": "orgID","keyse2e":{"orgPubKey":"orgPubKey","orgEncPrivKey":"orgEncPrivKey","userPubKey":"userPubKey","userEncPrivKey":"userEncPrivKey"}}'

}
  };

  // The user's userID
  string userID = 1;  
  // The user's email
  string email = 2;
  // The user's name
  string userName = 3;
  // The user's orgID
  string orgID = 4;
  // Whether the user is an admin
  bool isAdmin = 5;
  // Returns organization and user keypairs if e2e enabled
  KeysE2e keyse2e = 6;
}

message KeysE2e {
  string orgPubKey = 1;
  string orgEncPrivKey = 2;
  string userPubKey = 3;
  string userEncPrivKey = 4;
}


message Invitation {
  string email = 1;
  google.protobuf.Timestamp expireTime = 2;
  google.protobuf.Timestamp createTime = 3;
}

message InviteUserReq {
  option (grpc.gateway.protoc_gen_swagger.options.openapiv2_schema) = {
    json_schema: {
      title: "InviteUserReq"
    }
    example: {
      value: '{"email": "account@strongsalt.com", "expireTime": 10}'
    }
  };
  string email = 1;
  // expiration time in minutes, default 7*24*60
  int64 expireTime = 2;
}

message InviteUserResp {
  option (grpc.gateway.protoc_gen_swagger.options.openapiv2_schema) = {
    json_schema: {
      title: "InviteUserResp"
    }
    example: {
      value: '{"success": true}'
    }
  };
  bool success = 1;
}

message ListInvitationsReq {
  option (grpc.gateway.protoc_gen_swagger.options.openapiv2_schema) = {
    json_schema: {
      title: "ListInvitationsReq"
    }
    example: {
      value: '{"maxInvitation": 10}'
    }
  };
  int64 maxInvitation = 1;
}

message ListInvitationsResp {
  option (grpc.gateway.protoc_gen_swagger.options.openapiv2_schema) = {
    json_schema: {
      title: "ListInvitationsResp"
    }
    example: {
      value: '{"invitations": [{"email":"example@email.com", "expireTime":10, "invitedAt": "2020-02-01T12:30:15.123Z"}]}'
    }
  };
  repeated Invitation invitations = 1;
}

message RevokeInvitationReq {
  option (grpc.gateway.protoc_gen_swagger.options.openapiv2_schema) = {
    json_schema: {
      title: "RevokeInvitationsReq"
    }
    example: {
      value: '{"email": "account@strongsalt.com"}'
    }
  };
  string email = 1;
}

message RevokeInvitationResp {
  option (grpc.gateway.protoc_gen_swagger.options.openapiv2_schema) = {
    json_schema: {
      title: "RevokeInvitationsResp"
    }
    example: {
      value: '{"success": true, "codeAlreadyUsed": false}'
    }
  };
  bool success = 1;
  bool codeAlreadyUsed = 2;
}

message SetUserAuthMetadataReq {
  option (grpc.gateway.protoc_gen_swagger.options.openapiv2_schema) = {
    json_schema: {
      title: "SetUserAuthMetadataReq"
    }
    example: {
      value: '{"authID": "abcd12", "kdfMeta": "kdfMetadata", "encryptedKeys": [{"encKey": "asdf", "encryptorID": "abc123", "ownerID": "person", "keyID": "asdf"}]}'
    }
  };
  string authID = 1;
  AuthType newAuthType = 2;
  int32 newAuthVersion = 3;
  string srpVerifier = 4;
  // new kdfMeta data
  string kdfMeta = 5;
  // List of re-encrypted asymmetric keys with the new passwordKey,
  repeated EncryptedKey encryptedKeys = 6;
}

message SetUserAuthMetadataResp {
  option (grpc.gateway.protoc_gen_swagger.options.openapiv2_schema) = {
    json_schema: {
      title: "SetUserAuthMetadataResp"
    }
    example: {
      value: '{"success": true, "restart": false, "keyID": "abc123"}'
    }
  };
  // Whether or not the operation was successful
    bool success = 1;
  // Whether or not the operation needs restart
    bool restart = 2;
  // The keyID of the new passwordKey
    string keyID = 3;
}